dev/tests/cases/neg/12_fmt_count.tv
df main() -> void {
    fixed s: str = fmt("{} and {}", 1);
    echo!(s);
}
